--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,16 @@ services:
       - flower_garden-net
     ports:
       - ${FLORACCESS_APP_PORT}:80
+    # Security hardening
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/api-docs || exit 1"]
       interval: 10s
@@ -86,6 +96,16 @@ services:
       - flower_garden-net
     ports:
       - ${ECONORIS_APP_PORT}:80
+    # Security hardening
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/api-docs || exit 1"]
       interval: 10s
@@ -110,6 +130,22 @@ services:
         condition: service_healthy
       floraccess-server:
         condition: service_healthy
+    # Security hardening
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+      - CHOWN
+      - SETGID
+      - SETUID
+    read_only: true
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
+      - /run:rw,mode=0755
+      - /var/cache/nginx:rw
+      - /var/cache/nginx/client_temp:rw
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-app-web:80 || exit 1"]
       interval: 10s
