--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-FLORACCESS_DB_USER= # Same as DB_USER in ./FlorAccess/.env
-FLORACCESS_DB_NAME= # Same as DB_NAME in ./FlorAccess/.env
-FLORACCESS_APP_PORT= # Port to access the FlorAccess server
+FLORACCESS_DB_USER= # Same as POSTGRES_USER in ./config/.env.floraccess_db
+FLORACCESS_DB_NAME= # Same as POSTGRES_DB in ./config/.env.floraccess_db
+FLORACCESS_SERVER_PORT= # Port to access the FlorAccess server
 
-ECONORIS_DB_USER= # Same as DB_USER in ./Econoris/.env
-ECONORIS_DB_NAME= # Same as DB_NAME in ./Econoris/.env
-ECONORIS_APP_PORT= # Port to access the Econoris server
+ECONORIS_DB_USER= # Same as POSTGRES_USER in ./config/.env.econoris_db
+ECONORIS_DB_NAME= # Same as POSTGRES_DB in ./config/.env.econoris_db
+ECONORIS_SERVER_PORT= # Port to access the Econoris server
+
+ECONORIS_APP_PORT= # Port to access the Econoris app
