--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     image: floraccess-db:latest
     restart: always
     env_file:
-      - ./FlorAccess/.env
+      - ./config/.env.floraccess_db
     volumes:
       - floraccess_db_data:/var/lib/postgresql/floraccess_db_data
       - ./FlorAccess/Database:/docker-entrypoint-initdb.d
@@ -30,7 +30,7 @@ services:
     image: econoris-db:latest
     restart: always
     env_file:
-      - ./Econoris_server/.env
+      - ./config/.env.econoris_db
     volumes:
       - econoris_db_data:/var/lib/postgresql/econoris_db_data
       - ./Econoris_server/Database:/docker-entrypoint-initdb.d
@@ -54,7 +54,7 @@ services:
     image: floraccess-server:latest
     restart: always
     env_file:
-      - ./FlorAccess/.env
+      - ./config/.env.floraccess_server
     depends_on:
       floraccess-db:
         condition: service_healthy
@@ -62,7 +62,7 @@ services:
       - floraccess-net
       - flower_garden-net
     ports:
-      - ${FLORACCESS_APP_PORT}:80
+      - ${FLORACCESS_SERVER_PORT}:80
     # Security hardening
     security_opt:
       - no-new-privileges:true
@@ -87,7 +87,7 @@ services:
     image: econoris-server:latest
     restart: always
     env_file:
-      - ./Econoris_server/.env
+      - ./config/.env.econoris_server
     depends_on:
       econoris-db:
         condition: service_healthy
@@ -95,7 +95,7 @@ services:
       - econoris-net
       - flower_garden-net
     ports:
-      - ${ECONORIS_APP_PORT}:80
+      - ${ECONORIS_SERVER_PORT}:80
     # Security hardening
     security_opt:
       - no-new-privileges:true
@@ -124,7 +124,7 @@ services:
     networks:
       - flower_garden-net
     ports:
-      - "26003:80"
+      - ${ECONORIS_APP_PORT}:80
     depends_on:
       econoris-server:
         condition: service_healthy
