--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-FLORACCESS_DB_USER= # Same as POSTGRES_USER in ./config/.env.floraccess_db
-FLORACCESS_DB_NAME= # Same as POSTGRES_DB in ./config/.env.floraccess_db
-FLORACCESS_SERVER_PORT= # Port to access the FlorAccess server
+FLORACCESS_DB_USER=postgres # Same as POSTGRES_USER in ./config/.env.floraccess_db
+FLORACCESS_DB_NAME=floraccess # Same as POSTGRES_DB in ./config/.env.floraccess_db
+FLORACCESS_SERVER_PORT=8081 # Port to access the FlorAccess server
 
-ECONORIS_DB_USER= # Same as POSTGRES_USER in ./config/.env.econoris_db
-ECONORIS_DB_NAME= # Same as POSTGRES_DB in ./config/.env.econoris_db
-ECONORIS_SERVER_PORT= # Port to access the Econoris server
+ECONORIS_DB_USER=postgres # Same as POSTGRES_USER in ./config/.env.econoris_db
+ECONORIS_DB_NAME=econoris # Same as POSTGRES_DB in ./config/.env.econoris_db
+ECONORIS_SERVER_PORT=8082 # Port to access the Econoris server
 
-ECONORIS_APP_PORT= # Port to access the Econoris app
+ECONORIS_APP_PORT=8083 # Port to access the Econoris app
