--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     tmpfs:
       - /tmp:exec,nosuid,nodev
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/api-docs || exit 1"]
+      test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -107,7 +107,7 @@ services:
     tmpfs:
       - /tmp:exec,nosuid,nodev
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/api-docs || exit 1"]
+      test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -148,7 +148,7 @@ services:
       - /var/cache/nginx:rw
       - /var/cache/nginx/client_temp:rw
     healthcheck:
-      test: ["CMD-SHELL", "wget -q --spider http://econoris-app-web:80 || exit 1"]
+      test: ["CMD-SHELL", "wget -q --spider http://econoris-app-web:80/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
