--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - floraccess-net
       - flower_garden-net
     ports:
-      - ${FLORACCESS_SERVER_PORT}:80
+      - ${FLORACCESS_SERVER_PORT:-}:80
     # Security hardening
     security_opt:
       - no-new-privileges:true
@@ -95,7 +95,7 @@ services:
       - econoris-net
       - flower_garden-net
     ports:
-      - ${ECONORIS_SERVER_PORT}:80
+      - ${ECONORIS_SERVER_PORT:-}:80
     # Security hardening
     security_opt:
       - no-new-privileges:true
@@ -125,7 +125,7 @@ services:
     networks:
       - flower_garden-net
     ports:
-      - ${ECONORIS_APP_PORT}:80
+      - ${ECONORIS_APP_PORT:-}:80
     depends_on:
       econoris-server:
         condition: service_healthy
