--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -20,8 +20,10 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - ./traefik.yml:/etc/traefik/traefik.yml
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "letsencrypt:/letsencrypt"
+      - "/var/log/traefik:/var/log/traefik"
     networks:
       - flower_garden-net
 
