--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
     cap_add:
       - NET_BIND_SERVICE
     read_only: true
+    user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
     healthcheck:
@@ -104,6 +105,7 @@ services:
     cap_add:
       - NET_BIND_SERVICE
     read_only: true
+    user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
     healthcheck:
@@ -142,6 +144,7 @@ services:
       - SETGID
       - SETUID
     read_only: true
+    user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
       - /run:rw,mode=0755
