utilisation d'un utilisateur non root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,10 +146,15 @@ services:
     read_only: true
     user: "1800:1800"
     tmpfs:
-      - /tmp:exec,nosuid,nodev
-      - /run:rw,mode=0755
-      - /var/cache/nginx:rw
-      - /var/cache/nginx/client_temp:rw
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
+      - /run:rw,mode=0755,uid=1800,gid=1800
+      - /run/nginx:rw,mode=0755,uid=1800,gid=1800
+      - /var/cache/nginx:rw,uid=1800,gid=1800
+      - /var/cache/nginx/client_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/proxy_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/fastcgi_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/uwsgi_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/scgi_temp:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-app-web:80/ || exit 1"]
       interval: 10s
