--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -33,19 +33,19 @@ services:
   floraccess-server:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.floraccess.rule=Host(`floraccessserver.florobart.fr`)"
-      - "traefik.http.routers.floraccess.entrypoints=websecure"
-      - "traefik.http.routers.floraccess.tls.certresolver=le"
-      - "traefik.http.services.floraccess.loadbalancer.server.port=80"
+      - "traefik.http.routers.floraccess-server.rule=Host(`floraccessserver.florobart.fr`)"
+      - "traefik.http.routers.floraccess-server.entrypoints=websecure"
+      - "traefik.http.routers.floraccess-server.tls.certresolver=le"
+      - "traefik.http.services.floraccess-server.loadbalancer.server.port=80"
 
   # Econoris Server #
   econoris-server:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.econoris.rule=Host(`econorisserver.florobart.fr`)"
-      - "traefik.http.routers.econoris.entrypoints=websecure"
-      - "traefik.http.routers.econoris.tls.certresolver=le"
-      - "traefik.http.services.econoris.loadbalancer.server.port=80"
+      - "traefik.http.routers.econoris-server.rule=Host(`econorisserver.florobart.fr`)"
+      - "traefik.http.routers.econoris-server.entrypoints=websecure"
+      - "traefik.http.routers.econoris-server.tls.certresolver=le"
+      - "traefik.http.services.econoris-server.loadbalancer.server.port=80"
 
 
   #==========#
@@ -54,10 +54,10 @@ services:
   econoris-app-web:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.econorisweb.rule=Host(`econoris.florobart.fr`)"
-      - "traefik.http.routers.econorisweb.entrypoints=websecure"
-      - "traefik.http.routers.econorisweb.tls.certresolver=le"
-      - "traefik.http.services.econorisweb.loadbalancer.server.port=80"
+      - "traefik.http.routers.econoris-app-web.rule=Host(`econoris.florobart.fr`)"
+      - "traefik.http.routers.econoris-app-web.entrypoints=websecure"
+      - "traefik.http.routers.econoris-app-web.tls.certresolver=le"
+      - "traefik.http.services.econoris-app-web.loadbalancer.server.port=80"
 
 
 
