--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,7 @@ ECONORIS_SERVER_PORT=26002 # Port to access the Econoris server
 
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
 
+# Traefik / Reverse Proxy settings
+TRAEFIK_LOG_LEVEL=INFO # Traefik log level (e.g., DEBUG, INFO, WARN, ERROR)
+TRAEFIK_ACCESS_LOG=true # Enable or disable Traefik access logs
 LETSENCRYPT_EMAIL= # Email for Let's Encrypt notifications (e.g., expiration warnings)
