ajout du fichier d'environnement pour econoris_app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,8 @@ services:
       dockerfile: Dockerfile
     image: econoris-app-web:latest
     restart: always
+    env_file:
+      - ./config/.env.econoris_app
     networks:
       - flower_garden-net
     ports:
