Ajout de données dans le .env.example de econoris app

--- a/config/.env.example.ln.econoris_app
+++ b/config/.env.example.ln.econoris_app
@@ -1,5 +1,7 @@
-# Le .env.example pour Econoris est présent uniquement dans le dossier econoris_app sous le nom '.env.public' pour des résons techniques.
-# Pour rassembler tous les fichiers .env dans le même dossier 'config', vous pouvez créer un lien symbolique comme suit :
-# ln -s ../econoris_app/.env.public .env.econoris_app
-#
-# Note : Le fichier 'init_env.sh' permet de copier les fichiers .env et de créer les liens symboliques nécessaires.
+#/!\ Ne pas mettre de données sensibles dans ce fichier /!\
+# Example environment variables for Econoris
+APP_NAME=Econoris
+FLORACCESS_SERVER=http://localhost:26001
+ECONORIS_SERVER=http://localhost:26002
+DEFAULT_LANGUAGE=fr_FR
+DEFAULT_CURRENCY=EUR
