--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,7 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
+      - /app/dist/swagger/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
       interval: 10s
@@ -108,6 +109,7 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev
+      - /app/dist/swagger/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
       interval: 10s
