bug fix + ajustement pour coller au nouvelle version des API

--- a/config/.env.example.econoris_server
+++ b/config/.env.example.econoris_server
@@ -1,29 +1,27 @@
-# Configuration de l'application
-APP_NAME=Econoris
-APP_PORT=26002
-HOST_NAME=0.0.0.0
-BASE_URL="http://0.0.0.0:26002"
-APP_ENV=dev
+# Application configuration
+HOST_NAME=0.0.0.0 # Host (example: "localhost")
+APP_PORT=26002 # Exposed port for Econoris server in development (example: 8080)
+BASE_URL="http://localhost:26002" # URL where the API is available --> "http://${HOST_NAME}:${APP_PORT}"
+APP_ENV=dev # Environment (dev, prod, silent) used to print more or less logs in console and expose Swagger endpoint
 
 # Database
-DB_SCHEME=postgresql
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=econoris
-DB_HOST=econoris-db
+DB_SCHEME=postgresql # Database scheme (postgresql, mysql, etc.)
+DB_USER=postgres # User for Econoris DB
+DB_PASSWORD=postgres # Password for Econoris DB
+DB_HOST=econoris-db # Hostname of the database service in Docker network
+DB_NAME=econoris # Database name for Econoris DB
 
-# Security
-HASH_ALGORITHM=sha256
-HASH_ROUNDS=10
+# Email
+MAIL_SERVICE= # Email service provider (example: gmail)
+MAIL_USERNAME= # Email account
+MAIL_PASSWORD= # Password or App Password for the email account
 
-# Handshake token
-HANDSHAKE_STATIC_TOKEN="ABCD"
-AUTH_APP_URL="http://floraccess-server:80"
-AUTH_APP_HANDSHAKE_URL="http://floraccess-server:80/handshake"
+# Rate Limiting
+REQUEST_LIMIT_PER_SECOND=10 # Number of requests allowed per second and per IP (example: 10)
+REQUEST_LIMIT_TIME=30min # Time window to count requests in seconds (example: same value as JWT_EXPIRATION)
+
+# Authentication
+AUTH_APP_URL="http://localhost:26001" # URL of the authentication application
 
 # CORS
-CORS_ALLOWED_ORIGINS='http://localhost:26003,http://localhost:26004'
-
-
-# Administration
-ADMIN_EMAIL= # unused
+CORS_ALLOWED_ORIGINS="http://localhost:26003,http://localhost:26004" # List of allowed domains to make requests to the API (separated by commas)
