--- a/config/.env.example.floraccess_server
+++ b/config/.env.example.floraccess_server
@@ -1,41 +1,37 @@
 # Application configuration
-APP_NAME=FlorAccess
-APP_PORT=26001
-HOST_NAME=0.0.0.0
-BASE_URL="http://0.0.0.0:26001"
-APP_ENV=dev
+HOST_NAME=0.0.0.0 # Host (example: "localhost")
+APP_PORT=26001 # Exposed port for FlorAccess server in development (example: 8080)
+BASE_URL="http://localhost:26001" # URL where the API is available --> "http://${HOST_NAME}:${APP_PORT}"
+APP_ENV=dev # Environment (dev, prod, silent) used to print more or less logs in console and expose Swagger endpoint
 
 # Database
-DB_SCHEME=postgresql
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=floraccess
-DB_HOST=floraccess-db
-
-# JWT
-JWT_SIGNING_KEY="ABCDE"
-JWT_EXPIRATION="30d"
+DB_SCHEME=postgresql # Database scheme (postgresql, mysql, etc.)
+DB_USER=postgres # User for FlorAccess DB
+DB_PASSWORD=postgres # Password for FlorAccess DB
+DB_HOST=floraccess-db # Hostname of the database service in Docker network
+DB_NAME=floraccess # Database name for FlorAccess DB
 
 # Email
-MAIL_SERVICE=
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_SERVICE= # Email service provider (example: gmail)
+MAIL_USERNAME= # Email account
+MAIL_PASSWORD= # Password or App Password for the email account
+
+# JWT
+JWT_SIGNING_KEY=ABCDE # Secret key used to sign the JWT token
+JWT_EXPIRATION=30d # Expiration time of the JWT token (example: 30d for 30 days) this value can be in ms, s, m, h, d
 
 # Security
-TOKEN_LENGTH=12
-HASH_ROUNDS=10
-TOKEN_EXPIRATION=3600 # en secondes
-REQUEST_LIMIT_PER_SECOND=2 # Nombre de requêtes autorisées par seconde et par ip
-REQUEST_LIMIT_TIME=2 # en secondes
-HASH_ALGORITHM=sha256 # TODO : REMOVE THIS for replace by hashString function
-CODE_DATA_SET="0123456789"
+HASH_ROUNDS=12 # Number of rounds used to hash passwords (example: 10)
+TOKEN_LENGTH=256 # Length of the token generated in characters (example: 256)
+TOKEN_EXPIRATION=30min # Expiration time of the token generated (example: same value as JWT_EXPIRATION) this is for all tokens except the JWT token
 
-# Handshake authorized API
-HANDSHAKE_STATIC_TOKEN="ABCD"
-HANDSHAKE_AUTHORIZED_API=true
+# Authentication
+DEFAULT_AUTH_METHOD=EMAIL_CODE # Default authentication method used for users (example: "EMAIL_CODE" or "PASSWORD")
+CODE_DATA_SET=0123456789 # Characters used to generate codes send by email at user login
 
-# Default Authorized APIs
-DEFAULT_AUTHORIZED_APIS='[{"api_name": "Econoris", "api_url": "http://econoris-server:80/handshake"}]'
+# Rate Limiting
+REQUEST_LIMIT_PER_SECOND=10 # Number of requests allowed per second and per IP (example: 10)
+REQUEST_LIMIT_TIME=30min # Time window to count requests in seconds (example: same value as JWT_EXPIRATION)
 
 # CORS
-CORS_ALLOWED_ORIGINS='http://localhost:26003,http://localhost:26004'
+CORS_ALLOWED_ORIGINS="http://localhost:26003,http://localhost:26004" # List of allowed domains to make requests to the API (separated by commas)
