Ajout du .env dans le conteneur

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,8 @@ services:
     restart: always
     env_file:
       - ./config/.env.econoris_app
+    volumes:
+      - ./config/.env.econoris_app:/usr/share/nginx/html/assets/.env:ro
     networks:
       - flower_garden-net
     ports:
