--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,6 @@ services:
   #==========#
   # FlorAccess Database #
   floraccess-db:
-    build:
-      context: ./FlorAccess_server/Database
-      dockerfile: Dockerfile
     image: floraccess-db:latest
     restart: always
     env_file:
@@ -15,6 +12,8 @@ services:
       - floraccess_db_data:/var/lib/postgresql/floraccess_db_data
     networks:
       - floraccess-net
+    security_opt:
+      - no-new-privileges:true
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${FLORACCESS_DB_USER} -d ${FLORACCESS_DB_NAME} || exit 1"]
       interval: 5s
@@ -23,9 +22,6 @@ services:
 
   # Econoris Database #
   econoris-db:
-    build:
-      context: ./Econoris_server/Database
-      dockerfile: Dockerfile
     image: econoris-db:latest
     restart: always
     env_file:
@@ -34,6 +30,8 @@ services:
       - econoris_db_data:/var/lib/postgresql/econoris_db_data
     networks:
       - econoris-net
+    security_opt:
+      - no-new-privileges:true
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${ECONORIS_DB_USER} -d ${ECONORIS_DB_NAME} || exit 1"]
       interval: 5s
@@ -46,9 +44,6 @@ services:
   #========#
   # FlorAccess Server #
   floraccess-server:
-    build:
-      context: ./FlorAccess_server
-      dockerfile: Dockerfile
     image: floraccess-server:latest
     restart: always
     env_file:
@@ -61,7 +56,6 @@ services:
       - floraccess-net
     ports:
       - ${FLORACCESS_SERVER_PORT:-}:80
-    # Security hardening
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -81,9 +75,6 @@ services:
 
   # Econoris Server #
   econoris-server:
-    build:
-      context: ./Econoris_server
-      dockerfile: Dockerfile
     image: econoris-server:latest
     restart: always
     env_file:
@@ -96,7 +87,6 @@ services:
       - econoris-net
     ports:
       - ${ECONORIS_SERVER_PORT:-}:80
-    # Security hardening
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -119,9 +109,6 @@ services:
   # Web apps #
   #==========#
   econoris-app-web:
-    build:
-      context: ./econoris_app
-      dockerfile: Dockerfile
     image: econoris-app-web:latest
     restart: always
     env_file:
@@ -137,7 +124,6 @@ services:
         condition: service_healthy
       floraccess-server:
         condition: service_healthy
-    # Security hardening
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -166,13 +152,17 @@ services:
       retries: 5
 
 
-
+#=========#
+# Volumes #
+#=========#
 volumes:
   econoris_db_data:
   floraccess_db_data:
 
 
-
+#=========#
+# Réseaux #
+#=========#
 networks:
   floraccess-net:
     driver: bridge
