Add flollylist_server and flollylist_db

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ ECONORIS_DB_USER=postgres # Same as POSTGRES_USER in ./config/.env.econoris_db
 ECONORIS_DB_NAME=econoris # Same as POSTGRES_DB in ./config/.env.econoris_db
 ECONORIS_SERVER_PORT=26002 # Port to access the Econoris server
 
+FLOLLYLIST_DB_USER=postgres # Same as POSTGRES_USER in ./config/.env.flollylist_db
+FLOLLYLIST_DB_NAME=flollylist # Same as POSTGRES_DB in ./config/.env.flollylist_db
+FLOLLYLIST_SERVER_PORT=26004 # Port to access the FlollyList server
+
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
 
 # Traefik / Reverse Proxy settings
