--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,24 @@ services:
       interval: 5s
       timeout: 30s
       retries: 5
+  
+  # FlollyList Database #
+  flollylist-db:
+    image: florobart/flollylist-db:latest
+    restart: always
+    env_file:
+      - ./config/.env.flollylist_db
+    volumes:
+      - flollylist_db_data:/var/lib/postgresql/flollylist_db_data
+    networks:
+      - flollylist-net
+    security_opt:
+      - no-new-privileges:true
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${FLOLLYLIST_DB_USER} -d ${FLOLLYLIST_DB_NAME} || exit 1"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
 
   #========#
@@ -103,6 +121,37 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  
+  # FlollyList Server #
+  flollylist-server:
+    image: florobart/flollylist-server:latest
+    restart: always
+    env_file:
+      - ./config/.env.flollylist_server
+    depends_on:
+      flollylist-db:
+        condition: service_healthy
+    networks:
+      - flower_garden-net
+      - flollylist-net
+    ports:
+      - ${FLOLLYLIST_SERVER_PORT:-}:80
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    user: "1800:1800"
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
+      - /app/dist/swagger/:rw,uid=1800,gid=1800
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://flollylist-server:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
   #==========#
@@ -158,15 +207,18 @@ services:
 volumes:
   econoris_db_data:
   floraccess_db_data:
+  flollylist_db_data:
 
 
 #=========#
 # Réseaux #
 #=========#
 networks:
+  flower_garden-net:
+    driver: bridge
   floraccess-net:
     driver: bridge
   econoris-net:
     driver: bridge
-  flower_garden-net:
+  flollylist-net:
     driver: bridge
