feat(FlollyList): Add FlollyList to docker compose

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ FLOLLYLIST_DB_NAME=flollylist # Same as POSTGRES_DB in ./config/.env.flollylist_
 FLOLLYLIST_SERVER_PORT=26004 # Port to access the FlollyList server
 
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
+FLOLLYLIST_APP_PORT=26005 # Port to access the FlollyList app
 
 # Traefik / Reverse Proxy settings
 TRAEFIK_LOG_LEVEL=INFO # Traefik log level (e.g., DEBUG, INFO, WARN, ERROR)
