--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,7 @@ services:
   #==========#
   # Web apps #
   #==========#
+  # Econoris App Web #
   econoris-app-web:
     image: florobart/econoris-app-web:latest
     restart: always
@@ -196,6 +197,50 @@ services:
       - /var/cache/nginx/scgi_temp:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-app-web:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # FlollyList App Web #
+  flollylist-app-web:
+    image: florobart/flollylist-app-web:latest
+    restart: always
+    env_file:
+      - ./config/.env.flollylist_app
+    volumes:
+      - ./config/.env.flollylist_app:/usr/share/nginx/html/assets/.env:ro
+    networks:
+      - flower_garden-net
+    ports:
+      - ${FLOLLYLIST_APP_PORT:-}:80
+    depends_on:
+      flollylist-server:
+        condition: service_healthy
+      floraccess-server:
+        condition: service_healthy
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+      - CHOWN
+      - SETGID
+      - SETUID
+    read_only: true
+    user: "1800:1800"
+    tmpfs:
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
+      - /run:rw,mode=0755,uid=1800,gid=1800
+      - /run/nginx:rw,mode=0755,uid=1800,gid=1800
+      - /var/cache/nginx:rw,uid=1800,gid=1800
+      - /var/cache/nginx/client_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/proxy_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/fastcgi_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/uwsgi_temp:rw,uid=1800,gid=1800
+      - /var/cache/nginx/scgi_temp:rw,uid=1800,gid=1800
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://flollylist-app-web:80/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
