--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,18 +7,51 @@ services:
     build:
       context: ./FlorAccess_server/Database
       dockerfile: Dockerfile
+    env_file:
+      - ./config/.env.floraccess_db
+    volumes:
+      - floraccess_db_data:/var/lib/postgresql/floraccess_db_data
+    networks:
+      - floraccess-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${FLORACCESS_DB_USER} -d ${FLORACCESS_DB_NAME} || exit 1"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
   # Econoris Database #
   econoris-db:
     build:
       context: ./Econoris_server/Database
       dockerfile: Dockerfile
+    env_file:
+      - ./config/.env.econoris_db
+    volumes:
+      - econoris_db_data:/var/lib/postgresql/econoris_db_data
+    networks:
+      - econoris-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${ECONORIS_DB_USER} -d ${ECONORIS_DB_NAME} || exit 1"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
   
   # FlollyList Database #
   flollylist-db:
     build:
       context: ./FlollyList_server/Database
       dockerfile: Dockerfile
+    env_file:
+      - ./config/.env.flollylist_db
+    volumes:
+      - flollylist_db_data:/var/lib/postgresql/flollylist_db_data
+    networks:
+      - flollylist-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${FLOLLYLIST_DB_USER} -d ${FLOLLYLIST_DB_NAME} || exit 1"]
+      interval: 5s
+      timeout: 30s
+      retries: 5
 
 
   #========#
@@ -27,32 +60,80 @@ services:
   # FlorAccess Server #
   floraccess-server:
     image: node:lts-alpine
+    working_dir: /app
+    env_file:
+      - ./config/.env.floraccess_server
+    depends_on:
+      floraccess-db:
+        condition: service_healthy
+    networks:
+      - flower_garden-net
+      - floraccess-net
+    ports:
+      - ${FLORACCESS_SERVER_PORT:-}:80
     volumes:
       - ./FlorAccess_server:/app/
       - ./FlorAccess_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
       - /app/src/swagger/json:rw,uid=1800,gid=1800
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # Econoris Server #
   econoris-server:
     image: node:lts-alpine
+    working_dir: /app
+    env_file:
+      - ./config/.env.econoris_server
+    depends_on:
+      econoris-db:
+        condition: service_healthy
+    networks:
+      - flower_garden-net
+      - econoris-net
+    ports:
+      - ${ECONORIS_SERVER_PORT:-}:80
     volumes:
       - ./Econoris_server:/app/
       - ./Econoris_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
       - /app/src/swagger/json:rw,uid=1800,gid=1800
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   
   # FlollyList Server #
   flollylist-server:
     image: node:lts-alpine
+    working_dir: /app
+    env_file:
+      - ./config/.env.flollylist_server
+    depends_on:
+      flollylist-db:
+        condition: service_healthy
+    networks:
+      - flower_garden-net
+      - flollylist-net
+    ports:
+      - ${FLOLLYLIST_SERVER_PORT:-}:80
     volumes:
       - ./FlollyList_server:/app/
       - ./FlollyList_server/node_modules:/app/node_modules
     command: ["npm", "run", "dev"]
     tmpfs:
       - /app/src/swagger/json:rw,uid=1800,gid=1800
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://flollylist-server:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
   #==========#
@@ -61,9 +142,21 @@ services:
   # Econoris App Web #
   econoris-app-web:
     image: nginx:stable-alpine
+    env_file:
+      - ./config/.env.econoris_app
+    networks:
+      - flower_garden-net
+    ports:
+      - ${ECONORIS_APP_PORT:-}:80
+    depends_on:
+      econoris-server:
+        condition: service_healthy
+      floraccess-server:
+        condition: service_healthy
     volumes:
       - ./econoris_app/build/web:/usr/share/nginx/html/
       - ./econoris_app/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./config/.env.econoris_app:/usr/share/nginx/html/assets/.env:ro
     command: ["nginx", "-g", "daemon off;"]
     working_dir: /app
     environment:
@@ -72,10 +165,46 @@ services:
   # FlollyList App Web #
   flollylist-app-web:
     image: nginx:stable-alpine
+    env_file:
+      - ./config/.env.flollylist_app
+    networks:
+      - flower_garden-net
+    ports:
+      - ${FLOLLYLIST_APP_PORT:-}:80
+    depends_on:
+      flollylist-server:
+        condition: service_healthy
+      floraccess-server:
+        condition: service_healthy
     volumes:
       - ./flollylist_app/build/web:/usr/share/nginx/html/
       - ./flollylist_app/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./config/.env.flollylist_app:/usr/share/nginx/html/assets/.env:ro
     command: ["nginx", "-g", "daemon off;"]
     working_dir: /app
     environment:
       - FLUTTER_ENV=dev
+
+
+
+#=========#
+# Volumes #
+#=========#
+volumes:
+  econoris_db_data:
+  floraccess_db_data:
+  flollylist_db_data:
+
+
+#=========#
+# Réseaux #
+#=========#
+networks:
+  flower_garden-net:
+    driver: bridge
+  floraccess-net:
+    driver: bridge
+  econoris-net:
+    driver: bridge
+  flollylist-net:
+    driver: bridge
