--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ FLOLLYLIST_SERVER_PORT=26004 # Port to access the FlollyList server
 
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
 FLOLLYLIST_APP_PORT=26005 # Port to access the FlollyList app
+FLOWER_GARDEN_APP_PORT=26006 # Port to access the Flower Garden app
 
 # Traefik / Reverse Proxy settings
 TRAEFIK_LOG_LEVEL=INFO # Traefik log level (e.g., DEBUG, INFO, WARN, ERROR)
