--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -67,7 +67,7 @@ services:
       floraccess-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - floraccess-net
     ports:
       - ${FLORACCESS_SERVER_PORT:-}:80
@@ -93,7 +93,7 @@ services:
       econoris-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - econoris-net
     ports:
       - ${ECONORIS_SERVER_PORT:-}:80
@@ -119,7 +119,7 @@ services:
       flollylist-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - flollylist-net
     ports:
       - ${FLOLLYLIST_SERVER_PORT:-}:80
@@ -145,7 +145,7 @@ services:
     env_file:
       - ./config/.env.econoris_app
     networks:
-      - flower_garden-net
+      - flower-garden-net
     ports:
       - ${ECONORIS_APP_PORT:-}:80
     depends_on:
@@ -168,7 +168,7 @@ services:
     env_file:
       - ./config/.env.flollylist_app
     networks:
-      - flower_garden-net
+      - flower-garden-net
     ports:
       - ${FLOLLYLIST_APP_PORT:-}:80
     depends_on:
@@ -185,6 +185,21 @@ services:
     environment:
       - FLUTTER_ENV=dev
 
+  flower-garden-app:
+    image: node:24-alpine
+    working_dir: /app
+    env_file: ./config/.env.flower_garden_app
+    networks:
+      - flower-garden-net
+    volumes:
+      - ./:/app/
+      - ./node_modules:/app/node_modules
+    command: sh -c "cd /app && npm run dev"
+    ports:
+      - ${FLOWER_GARDEN_APP_PORT:-}:80
+    user: "1800:1800"
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
 
 
 #=========#
@@ -200,7 +215,7 @@ volumes:
 # Réseaux #
 #=========#
 networks:
-  flower_garden-net:
+  flower-garden-net:
     driver: bridge
   floraccess-net:
     driver: bridge
