--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -25,7 +25,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "letsencrypt:/letsencrypt"
     networks:
-      - flower_garden-net
+      - flower-garden-net
 
 
   #========#
@@ -35,8 +35,8 @@ services:
   floraccess-server:
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=flower_garden_flower_garden-net"
-      - "traefik.http.routers.floraccess-server.rule=Host(`floraccessserver.florobart.fr`)"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
+      - "traefik.http.routers.floraccess-server.rule=Host(`floraccess-server.florobart.fr`)"
       - "traefik.http.routers.floraccess-server.entrypoints=websecure"
       - "traefik.http.routers.floraccess-server.tls.certresolver=le"
       - "traefik.http.services.floraccess-server.loadbalancer.server.port=80"
@@ -45,8 +45,8 @@ services:
   econoris-server:
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=flower_garden_flower_garden-net"
-      - "traefik.http.routers.econoris-server.rule=Host(`econorisserver.florobart.fr`)"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
+      - "traefik.http.routers.econoris-server.rule=Host(`econoris-server.florobart.fr`)"
       - "traefik.http.routers.econoris-server.entrypoints=websecure"
       - "traefik.http.routers.econoris-server.tls.certresolver=le"
       - "traefik.http.services.econoris-server.loadbalancer.server.port=80"
@@ -55,8 +55,8 @@ services:
   flollylist-server:
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=flower_garden_flower_garden-net"
-      - "traefik.http.routers.flollylist-server.rule=Host(`flollylistserver.florobart.fr`)"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
+      - "traefik.http.routers.flollylist-server.rule=Host(`flollylist-server.florobart.fr`)"
       - "traefik.http.routers.flollylist-server.entrypoints=websecure"
       - "traefik.http.routers.flollylist-server.tls.certresolver=le"
       - "traefik.http.services.flollylist-server.loadbalancer.server.port=80"
@@ -69,7 +69,7 @@ services:
   econoris-app-web:
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=flower_garden_flower_garden-net"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
       - "traefik.http.routers.econoris-app-web.rule=Host(`econoris.florobart.fr`)"
       - "traefik.http.routers.econoris-app-web.entrypoints=websecure"
       - "traefik.http.routers.econoris-app-web.tls.certresolver=le"
@@ -79,11 +79,20 @@ services:
   flollylist-app-web:
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=flower_garden_flower_garden-net"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
       - "traefik.http.routers.flollylist-app-web.rule=Host(`flollylist.florobart.fr`)"
       - "traefik.http.routers.flollylist-app-web.entrypoints=websecure"
       - "traefik.http.routers.flollylist-app-web.tls.certresolver=le"
       - "traefik.http.services.flollylist-app-web.loadbalancer.server.port=80"
+
+  flower-garden-app:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=flower_garden_flower-garden-net"
+      - "traefik.http.routers.flower-garden-app.rule=Host(`flower-garden.florobart.fr`)"
+      - "traefik.http.routers.flower-garden-app.entrypoints=websecure"
+      - "traefik.http.routers.flower-garden-app.tls.certresolver=le"
+      - "traefik.http.services.flower-garden-app.loadbalancer.server.port=80"
 
 
 
