--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       floraccess-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - floraccess-net
     ports:
       - ${FLORACCESS_SERVER_PORT:-}:80
@@ -101,7 +101,7 @@ services:
       econoris-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - econoris-net
     ports:
       - ${ECONORIS_SERVER_PORT:-}:80
@@ -132,7 +132,7 @@ services:
       flollylist-db:
         condition: service_healthy
     networks:
-      - flower_garden-net
+      - flower-garden-net
       - flollylist-net
     ports:
       - ${FLOLLYLIST_SERVER_PORT:-}:80
@@ -166,7 +166,7 @@ services:
     volumes:
       - ./config/.env.econoris_app:/usr/share/nginx/html/assets/.env:ro
     networks:
-      - flower_garden-net
+      - flower-garden-net
     ports:
       - ${ECONORIS_APP_PORT:-}:80
     depends_on:
@@ -210,7 +210,7 @@ services:
     volumes:
       - ./config/.env.flollylist_app:/usr/share/nginx/html/assets/.env:ro
     networks:
-      - flower_garden-net
+      - flower-garden-net
     ports:
       - ${FLOLLYLIST_APP_PORT:-}:80
     depends_on:
@@ -245,6 +245,30 @@ services:
       timeout: 5s
       retries: 5
 
+  # Flower garden app #
+  flower-garden-app:
+    image: florobart/flower-garden-app:latest
+    restart: always
+    env_file:
+      - ./config/.env.flower_garden_app
+    networks:
+      - flower-garden-net
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    read_only: true
+    user: "1800:1800"
+    tmpfs:
+      - /tmp:exec,nosuid,nodev
+    healthcheck:
+      test: ["CMD-SHELL", "wget -q --spider http://flower-garden-app:80/ || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 
 #=========#
 # Volumes #
@@ -259,7 +283,7 @@ volumes:
 # Réseaux #
 #=========#
 networks:
-  flower_garden-net:
+  flower-garden-net:
     driver: bridge
   floraccess-net:
     driver: bridge
