fix(flower garden app): Fix flower garden app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -253,6 +253,8 @@ services:
       - ./config/.env.flower_garden_app
     networks:
       - flower-garden-net
+    ports:
+      - ${FLOWER_GARDEN_APP_PORT:-}:80
     security_opt:
       - no-new-privileges:true
     cap_drop:
@@ -262,7 +264,7 @@ services:
     read_only: true
     user: "1800:1800"
     tmpfs:
-      - /tmp:exec,nosuid,nodev
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flower-garden-app:80/ || exit 1"]
       interval: 10s
