--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -249,6 +249,7 @@ services:
   flower-garden-app:
     image: florobart/flower-garden-app:latest
     restart: always
+    working_dir: /app
     env_file:
       - ./config/.env.flower_garden_app
     networks:
@@ -265,6 +266,7 @@ services:
     user: "1800:1800"
     tmpfs:
       - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
+      - /app/${DIR_CACHE_PATH}/:rw,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flower-garden-app:80/ || exit 1"]
       interval: 10s
