--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,8 @@ FLOLLYLIST_DB_USER=postgres # Same as POSTGRES_USER in ./config/.env.flollylist_
 FLOLLYLIST_DB_NAME=flollylist # Same as POSTGRES_DB in ./config/.env.flollylist_db
 FLOLLYLIST_SERVER_PORT=26004 # Port to access the FlollyList server
 
+DIR_CACHE_PATH=public/html/cache # Path to the directory where the hosts projects HTML page will be saved (example: "public/html/cache")
+
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
 FLOLLYLIST_APP_PORT=26005 # Port to access the FlollyList app
 FLOWER_GARDEN_APP_PORT=26006 # Port to access the Flower Garden app
