--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -75,7 +75,7 @@ services:
       - ./FlorAccess_server:/app/
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /tmp:exec,nosuid,nodev
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://floraccess-server:80/ || exit 1"]
       interval: 10s
@@ -100,7 +100,7 @@ services:
       - ./Econoris_server:/app/
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /tmp:exec,nosuid,nodev
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://econoris-server:80/ || exit 1"]
       interval: 10s
@@ -125,7 +125,7 @@ services:
       - ./FlollyList_server:/app/
     command: ["npm", "run", "dev"]
     tmpfs:
-      - /tmp:exec,nosuid,nodev
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
     healthcheck:
       test: ["CMD-SHELL", "wget -q --spider http://flollylist-server:80/ || exit 1"]
       interval: 10s
@@ -196,7 +196,8 @@ services:
       - ${FLOWER_GARDEN_APP_PORT:-}:80
     user: "1800:1800"
     tmpfs:
-      - /tmp:exec,nosuid,nodev
+      - /tmp:exec,nosuid,nodev,uid=1800,gid=1800
+      - /app/${FLOWER_GARDEN_APP_DIR_CACHE_PATH}/:rw,uid=1800,gid=1800
 
 
 #=========#
