feat(Floraccess): Add Floraccess app web

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ FLOLLYLIST_SERVER_PORT=26004 # Port to access the FlollyList server
 
 FLOWER_GARDEN_APP_DIR_CACHE_PATH=public/html/cache # Path to the directory where the hosts projects HTML page will be saved (example: "public/html/cache")
 
+FLORACCESS_APP_PORT=26007 # Port to access the FlorAccess app
 ECONORIS_APP_PORT=26003 # Port to access the Econoris app
 FLOLLYLIST_APP_PORT=26005 # Port to access the FlollyList app
 FLOWER_GARDEN_APP_PORT=26006 # Port to access the Flower Garden app
